lexyacc/src/snot.ypp

%{
/*
This file is adapted from the file json.y at : https://gist.github.com/justjkk/436828/
The original license follows:

The MIT License (MIT)

Copyright (c) 2015 J Kishore Kumar

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
*/



#include <iostream>
#include <string>
#include <map>
#include <vector>
#include <utility>
#include <cstdlib>

#include <cassert>

#include "param_storage.h"

#include "snot.yy.hpp"

//-- I need this for atoi
using namespace std;
using namespace gsparams;

//-- Lexer prototype required by bison, aka getNextToken()
DictList* snot_parse_result = NULL;
int yylex();
int yyerror(const char *p) { cerr << "Parse error!" << endl; return 0;}
%}

%require "2.3"

%debug

%start START

%defines

%union {
  double val;
  std::string *sym;
  gsparams::DictList *onevalue;
  std::vector< gsparams::DictList> *valuelist;
  std::pair< std::string , gsparams::DictList> *onepair;
  std::vector< std::pair< std::string , gsparams::DictList> > *pairlist;
};

%token <val> NUMBER
%token <sym> STRING
%type <onevalue> START OBJECT ARRAY
%type <valuelist> ELEMENTS
%type <onepair> PAIR
%type <onevalue> VALUE
%type <pairlist> MEMBERS
%type <sym> COMMA
%left O_BEGIN O_END A_BEGIN A_END
%left COMMA
%left COLON
%%
START: ARRAY {
    snot_parse_result = new DictList(*$1);
    //$$ = $1;

    assert(gsparams::list == $1->my_type );
    assert(gsparams::list == $$->my_type );
    assert(gsparams::list == snot_parse_result->my_type );
  }
| OBJECT {
    snot_parse_result = new DictList(*$1);
    //$$ = $1;
  }
;
OBJECT: O_BEGIN O_END {
    	DictList *retval = new DictList();
	    retval->undecided_to_dict_else_error();
	    $$ = retval;
  }
| O_BEGIN MEMBERS O_END {
    DictList *retval = new DictList();
    retval->undecided_to_dict_else_error();

    std::vector< std::pair< std::string , gsparams::DictList> >::iterator itr;
    for(itr = $2->begin();itr!= $2->end();++itr){
        retval->set(itr->first,itr->second);
    }
    delete $2;
    $$=retval;
  }
;
MEMBERS: PAIR {
    std::vector< std::pair< std::string , gsparams::DictList> > *retptr = new std::vector< std::pair< std::string , gsparams::DictList> >(0);
    assert(0 == retptr->size());

    retptr->push_back(*$1);
    delete $1;
    $$ = retptr;
  }
| PAIR COMMA MEMBERS {
    std::vector< std::pair< std::string , gsparams::DictList> >*retptr = $3;
    retptr->insert(retptr->begin(), *$1);
    delete $1;
    $$ = retptr;
  }
;
PAIR: STRING COLON VALUE {
    std::pair<std::string, DictList> *retpair = new std::pair<std::string, DictList>;
    *retpair = std::make_pair(*$1, *$3);
    delete $1;
    delete $3;
    $$ = retpair;
  }
;
ARRAY: A_BEGIN A_END {
    DictList *retptr = new DictList();
      assert(gsparams::undecided == retptr->my_type);
      assert(-2 == retptr->size());
    retptr->undecided_to_list_else_error();
      std::cerr << "Type of newly initialized empty DictList is " << retptr->my_type << std::endl;
      std::cerr << "Size of newly initialized empty DictList is " << retptr->size() << std::endl;
      assert(0 == retptr->size());

    assert(gsparams::list == retptr->my_type);
    $$ = retptr;
  }
| A_BEGIN ELEMENTS A_END {
    DictList *retptr = new DictList();
      assert(gsparams::undecided == retptr->my_type);
      assert(-2 == retptr->size());
    retptr->undecided_to_list_else_error();
      //std::cerr << "Size of newly initialized DictList is " << retptr->size() << std::endl;
      assert(0 == retptr->size());

    std::vector<DictList> *elements_list = $2;
    std::vector<DictList>::iterator itr;
    for(itr=elements_list->begin();itr != elements_list->end();++itr){
      retptr->push_back(*itr);
    }

    //delete $2; //causes memory problem!?!? even without double free????
    //delete elements_list; //double free, don't do.
    elements_list = NULL;

    assert(gsparams::list == retptr->my_type);
    $$ = retptr;
}
;
ELEMENTS: VALUE {

    std::vector<DictList> *retval = new std::vector<DictList>(0);
    assert(0 == retval->size());
    retval->push_back(*$1);

    std::cerr << "The retval array is inexplicably of size " << retval->size() << std::endl;
    assert(1 == retval->size());

    delete $1;
    $$ = retval;
  }
| VALUE COMMA ELEMENTS {

    std::vector<DictList> *retptr = $3;
    retptr->insert(retptr->begin(), *$1);


    delete $1;
    $$ = retptr;
  }
;
VALUE: NUMBER {$$=new DictList($1);}
| OBJECT {$$=$1;}
| ARRAY {$$=$1;}
;
%%
//-- FUNCTION DEFINITIONS ---------------------------------
#include <iostream>

DictList parse_dictlist(std::string &in){
    snot_parse_result = NULL;

    YY_BUFFER_STATE buf = yy_scan_string(in.c_str());
    yy_switch_to_buffer(buf);

    int parse_val = yyparse();

    yy_delete_buffer(buf);

    if(parse_val != 0){
      //FAILURE
        if(NULL != snot_parse_result){
            delete snot_parse_result;
        }
        throw std::runtime_error("Could not parse a DictList");
    }


    DictList retval;
    retval = *snot_parse_result;

    delete snot_parse_result;
    snot_parse_result = NULL;

    return retval;
}
