lexyacc/src/snot.output
Grammar

    0 $accept: START $end

    1 START: ARRAY
    2      | OBJECT

    3 OBJECT: O_BEGIN O_END
    4       | O_BEGIN MEMBERS O_END

    5 MEMBERS: PAIR
    6        | PAIR COMMA MEMBERS

    7 PAIR: STRING COLON VALUE

    8 ARRAY: A_BEGIN A_END
    9      | A_BEGIN ELEMENTS A_END

   10 ELEMENTS: VALUE
   11         | VALUE COMMA ELEMENTS

   12 VALUE: NUMBER
   13      | OBJECT
   14      | ARRAY


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <val> (258) 12
    STRING <sym> (259) 7
    COMMA <sym> (260) 6 11
    O_BEGIN (261) 3 4
    O_END (262) 3 4
    A_BEGIN (263) 8 9
    A_END (264) 8 9
    COLON (265) 7


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    START <onevalue> (12)
        on left: 1 2
        on right: 0
    OBJECT <onevalue> (13)
        on left: 3 4
        on right: 2 13
    MEMBERS <pairlist> (14)
        on left: 5 6
        on right: 4 6
    PAIR <onepair> (15)
        on left: 7
        on right: 5 6
    ARRAY <onevalue> (16)
        on left: 8 9
        on right: 1 14
    ELEMENTS <valuelist> (17)
        on left: 10 11
        on right: 9 11
    VALUE <onevalue> (18)
        on left: 12 13 14
        on right: 7 10 11


State 0

    0 $accept: . START $end

    O_BEGIN  shift, and go to state 1
    A_BEGIN  shift, and go to state 2

    START   go to state 3
    OBJECT  go to state 4
    ARRAY   go to state 5


State 1

    3 OBJECT: O_BEGIN . O_END
    4       | O_BEGIN . MEMBERS O_END

    STRING  shift, and go to state 6
    O_END   shift, and go to state 7

    MEMBERS  go to state 8
    PAIR     go to state 9


State 2

    8 ARRAY: A_BEGIN . A_END
    9      | A_BEGIN . ELEMENTS A_END

    NUMBER   shift, and go to state 10
    O_BEGIN  shift, and go to state 1
    A_BEGIN  shift, and go to state 2
    A_END    shift, and go to state 11

    OBJECT    go to state 12
    ARRAY     go to state 13
    ELEMENTS  go to state 14
    VALUE     go to state 15


State 3

    0 $accept: START . $end

    $end  shift, and go to state 16


State 4

    2 START: OBJECT .

    $default  reduce using rule 2 (START)


State 5

    1 START: ARRAY .

    $default  reduce using rule 1 (START)


State 6

    7 PAIR: STRING . COLON VALUE

    COLON  shift, and go to state 17


State 7

    3 OBJECT: O_BEGIN O_END .

    $default  reduce using rule 3 (OBJECT)


State 8

    4 OBJECT: O_BEGIN MEMBERS . O_END

    O_END  shift, and go to state 18


State 9

    5 MEMBERS: PAIR .
    6        | PAIR . COMMA MEMBERS

    COMMA  shift, and go to state 19

    $default  reduce using rule 5 (MEMBERS)


State 10

   12 VALUE: NUMBER .

    $default  reduce using rule 12 (VALUE)


State 11

    8 ARRAY: A_BEGIN A_END .

    $default  reduce using rule 8 (ARRAY)


State 12

   13 VALUE: OBJECT .

    $default  reduce using rule 13 (VALUE)


State 13

   14 VALUE: ARRAY .

    $default  reduce using rule 14 (VALUE)


State 14

    9 ARRAY: A_BEGIN ELEMENTS . A_END

    A_END  shift, and go to state 20


State 15

   10 ELEMENTS: VALUE .
   11         | VALUE . COMMA ELEMENTS

    COMMA  shift, and go to state 21

    $default  reduce using rule 10 (ELEMENTS)


State 16

    0 $accept: START $end .

    $default  accept


State 17

    7 PAIR: STRING COLON . VALUE

    NUMBER   shift, and go to state 10
    O_BEGIN  shift, and go to state 1
    A_BEGIN  shift, and go to state 2

    OBJECT  go to state 12
    ARRAY   go to state 13
    VALUE   go to state 22


State 18

    4 OBJECT: O_BEGIN MEMBERS O_END .

    $default  reduce using rule 4 (OBJECT)


State 19

    6 MEMBERS: PAIR COMMA . MEMBERS

    STRING  shift, and go to state 6

    MEMBERS  go to state 23
    PAIR     go to state 9


State 20

    9 ARRAY: A_BEGIN ELEMENTS A_END .

    $default  reduce using rule 9 (ARRAY)


State 21

   11 ELEMENTS: VALUE COMMA . ELEMENTS

    NUMBER   shift, and go to state 10
    O_BEGIN  shift, and go to state 1
    A_BEGIN  shift, and go to state 2

    OBJECT    go to state 12
    ARRAY     go to state 13
    ELEMENTS  go to state 24
    VALUE     go to state 15


State 22

    7 PAIR: STRING COLON VALUE .

    $default  reduce using rule 7 (PAIR)


State 23

    6 MEMBERS: PAIR COMMA MEMBERS .

    $default  reduce using rule 6 (MEMBERS)


State 24

   11 ELEMENTS: VALUE COMMA ELEMENTS .

    $default  reduce using rule 11 (ELEMENTS)
